spacing issues

--- a/main.css
+++ b/main.css
@@ -642,12 +642,7 @@ input[type="checkbox"]:checked ~ hr {
     top: 1080vw !important;
   }
 
-  .accordion-item-mobile {
-    margin-left: 75vw !important;
-  }
-
   .likewize-mobile {
-    margin-left: -100vw;
     transform: scale(0.9);
   }
 }
@@ -669,7 +664,7 @@ input[type="checkbox"]:checked ~ hr {
 
   .likewize-mobile {
     width: 50vw;
-    margin-left: 30vw;
+    margin-left: 12vw;
     transform: scale(0.8);
   }
 }
